- New model description template - Test scripts for onnx / pickle

--- a/oai_specification.yaml
+++ b/oai_specification.yaml
@@ -29,7 +29,7 @@ paths:
               $ref: '#/components/schemas/model'
       responses:
         '200':
-          description: ''
+          description: 's'
 
 components:
   schemas:
